ipc/ipdl/test/ipdl/ok/bytebuf.ipdl
union Foo {
    int;
    ByteBuf;
};

intr protocol bytebuf {
parent:
    async Msg(ByteBuf s, Foo f);
    sync SyncMsg(ByteBuf s, Foo f)
        returns (ByteBuf t, Foo g);
    intr InterruptMsg(ByteBuf s, Foo f)
        returns (ByteBuf t, Foo g);
};
